force-app/main/default/objects/Product_Details__c/Product_Details__c.object-meta.xml
<CustomObject>
    <label>Product Details</label>
    <nameField>
        <label>Product Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>