force-app/main/default/objects/Product_Details__c/fields/Do_Not_Display_in_JoinNow__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Display_in_JoinNow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box If you donot want the Products to be visible in Join Now form.</inlineHelpText>
    <label>Do Not Display in JoinNow</label>
    <type>Checkbox</type>
</CustomField>