force-app/main/default/objects/Product_Details__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Product Details</relationshipLabel>
    <relationshipName>Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>