force-app/main/default/objects/Product_Details__c/fields/LF_Membership_Required__c.field-meta.xml
<CustomField>
    <fullName>LF_Membership_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LF Membership Required?</label>
    <type>Checkbox</type>
</CustomField>