force-app/main/default/objects/Product_Details__c/fields/LF_Signatory__c.field-meta.xml
<CustomField>
    <fullName>LF_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LF Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>