force-app/main/default/objects/Product_Details__c/fields/MC_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC ID</label>
    <type>Text</type>
</CustomField>