force-app/main/default/objects/Product_Details__c/fields/NetSuite_Error__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Error__c</fullName>
    <label>NetSuite Error</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>