force-app/main/default/objects/Product_Details__c/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>NS Item ID</inlineHelpText>
    <label>NetSuite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>