force-app/main/default/objects/Product_Details__c/fields/NetSuite_Name_Override__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Name_Override__c</fullName>
    <label>NetSuite Name Override</label>
    <length>180</length>
    <type>Text</type>
</CustomField>