force-app/main/default/objects/Product_Details__c/fields/NetSuite_Sync__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NetSuite Sync</label>
    <type>Checkbox</type>
</CustomField>