force-app/main/default/objects/Product_Details__c/fields/NS_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Item_Name__c</fullName>
    <formula>IF(
				RecordType.Name = &quot;Event&quot;,
    Event__r.Name &amp; &apos; - &apos; &amp; Products__r.Name &amp; &apos; - &apos; &amp; Tier__c,
IF(
				AND(NOT(ISBLANK( Tier__c )),
				NOT(ISBLANK( Start_Tier__c )),
				NOT(ISBLANK( End_Tier__c ))
				),
				Products__r.Name &amp; &apos;, &apos; &amp; Project__r.Name &amp; &apos;, &apos; &amp; TEXT(Start_Tier__c) &amp; &apos;-&apos; &amp; TEXT(End_Tier__c) &amp; &apos;-&apos; &amp;  Tier__c,
IF(
				AND(NOT(ISBLANK( Start_Tier__c )),
				NOT(ISBLANK( End_Tier__c ))
			 ),
	   Products__r.Name &amp; &apos;, &apos; &amp; Project__r.Name &amp; &apos;, &apos; &amp; TEXT(Start_Tier__c) &amp; &apos;-&apos; &amp; TEXT(End_Tier__c),
IF(
				AND(NOT(ISBLANK( Tier__c )),
				ISBLANK( Start_Tier__c ),
				ISBLANK( End_Tier__c )
				),
				Products__r.Name &amp; &apos;, &apos; &amp; Project__r.Name &amp; &apos;, &apos; &amp; Tier__c,
				Products__r.Name &amp; &apos;, &apos; &amp; Project__r.Name
		)
	)
)
				)</formula>
    <label>NS Item Name</label>
    <type>Text</type>
</CustomField>