force-app/main/default/objects/Product_Details__c/fields/NS_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>NS_Revenue_Schedule__c</fullName>
    <label>NS Revenue Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
                <label>Straight Line</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Directed Fund</label>
            </value>
            <value>
                <fullName>Straight Line</fullName>
                <isActive>false</isActive>
                <label>Straight Line</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>