force-app/main/default/objects/Product_Details__c/fields/Number_Of_Years_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Years_Required__c</fullName>
    <label>Number Of Years Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Number_Of_Years_Required</valueSetName>
    </valueSet>
</CustomField>