force-app/main/default/objects/Product_Details__c/fields/Parent_Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product Detail</label>
    <referenceTo>Product_Details__c</referenceTo>
    <relationshipLabel>Child Product Details</relationshipLabel>
    <relationshipName>Child_Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>