force-app/main/default/objects/Product_Details__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <label>Project Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>