force-app/main/default/objects/Product_Details__c/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prorate</fullName>
            </value>
            <value>
                <fullName>Non-Prorate</fullName>
            </value>
            <value>
                <fullName>Calendar Year</fullName>
            </value>
            <value>
                <fullName>Renewable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>