force-app/main/default/objects/Product_Details__c/fields/Skip_60_Char_Limit__c.field-meta.xml
<CustomField>
    <fullName>Skip_60_Char_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip 60 Char Limit</label>
    <type>Checkbox</type>
</CustomField>