force-app/main/default/objects/Product_Details__c/fields/Start_Tier__c.field-meta.xml
<CustomField>
    <fullName>Start_Tier__c</fullName>
    <label>Start Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>