force-app/main/default/objects/Product_Details__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event CoLocation</fullName>
            </value>
            <value>
                <fullName>Event Sponsorship</fullName>
            </value>
            <value>
                <fullName>Event Registration</fullName>
            </value>
            <value>
                <fullName>Event Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>