force-app/main/default/objects/Product_Details__c/fields/Subscription_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Calculation__c</fullName>
    <label>Subscription Calculation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>