force-app/main/default/objects/Product_Details__c/fields/Subsidiary_ID__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_ID__c</fullName>
    <formula>IF(Project__c != null ,Project__r.Subsidiary_ID__c , Event__r.BillFromProject__r.Subsidiary_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>