force-app/main/default/objects/Product_Details__c/fields/SubsidiaryID__c.field-meta.xml
<CustomField>
    <fullName>SubsidiaryID__c</fullName>
    <label>SubsidiaryID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>