force-app/main/default/objects/Product_Details__c/fields/Sugar_Product_Catalog_Guid__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Product_Catalog_Guid__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Absence of this value does not necessarily mean it didn&apos;t come from Sugar</inlineHelpText>
    <label>Sugar_Product_Catalog_Guid</label>
    <length>36</length>
    <type>Text</type>
</CustomField>