force-app/main/default/objects/Product_Details__c/fields/Sugar_Product_Catalog_Link__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Product_Catalog_Link__c</fullName>
    <description>Generated link to Sugar Product Catalog</description>
    <formula>HYPERLINK(
  &quot;https://office.linuxfoundation.org/crm/#ProductTemplates/&quot; &amp; Sugar_Product_Catalog_Guid__c, 
  Sugar_Product_Catalog_Guid__c
)</formula>
    <label>Sugar_Product_Catalog_Link</label>
    <type>Text</type>
</CustomField>