force-app/main/default/objects/Product_Details__c/fields/SynctoNetSuite__c.field-meta.xml
<CustomField>
    <fullName>SynctoNetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to NetSuite</label>
    <type>Checkbox</type>
</CustomField>