force-app/main/default/objects/Product_Details__c/fields/Tax_Class__c.field-meta.xml
<CustomField>
    <fullName>Tax_Class__c</fullName>
    <defaultValue>&quot;T1&quot;</defaultValue>
    <label>Tax Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>