force-app/main/default/objects/Product_Details__c/fields/Updated_Since_NS_Sync__c.field-meta.xml
<CustomField>
    <fullName>Updated_Since_NS_Sync__c</fullName>
    <formula>NOT(DATEVALUE(LastModifiedDate) = DATEVALUE(Last_NetSuite_Sync__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated Since NS Sync?</label>
    <type>Checkbox</type>
</CustomField>