force-app/main/default/objects/Product_Details__c/recordTypes/Alternate_Funding.recordType-meta.xml
<RecordType>
    <fullName>Alternate_Funding</fullName>
    <active>true</active>
    <label>Alternate Funding</label>
</RecordType>