force-app/main/default/objects/Product_Details__c/recordTypes/Membership.recordType-meta.xml
<RecordType>
    <fullName>Membership</fullName>
    <active>true</active>
    <label>Membership</label>
</RecordType>