force-app/main/default/objects/Product_Details__c/validationRules/Either_associate_with_Project_or_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_associate_with_Project_or_Event</fullName>
    <active>true</active>
    <description>Either associate Product Detail with Project or Event or Training</description>
    <errorConditionFormula>OR(AND(NOT(ISBLANK(Project__c)),NOT(ISBLANK(Event__c))),
AND(NOT(ISBLANK(Training__c)),NOT(ISBLANK(Event__c))),
AND(NOT(ISBLANK(Training__c)),NOT(ISBLANK(Project__c))))</errorConditionFormula>
    <errorMessage>Associate Product Details to either Project or Event</errorMessage>
</ValidationRule>