force-app/main/default/objects/Product_Details__c/validationRules/Fill_either_End_and_Start_Tier_or_Tier.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_either_End_and_Start_Tier_or_Tier</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(OR(NOT(ISBLANK(Start_Tier__c)),NOT(ISBLANK(End_Tier__c))),NOT(ISBLANK(Tier__c))),True, False)</errorConditionFormula>
    <errorMessage>Please enter either Start and End Tier or Tier field</errorMessage>
</ValidationRule>