force-app/main/default/objects/Product_Details__c/validationRules/Validates_the_product_family.validationRule-meta.xml
<ValidationRule>
    <fullName>Validates_the_product_family</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND( NOT(ISBLANK(Event__c)) , NOT(ISPICKVAL(Products__r.Family, &apos;Event&apos;)) ),
AND( NOT(ISBLANK(Training__c)) , NOT(ISPICKVAL(Products__r.Family, &apos;Training&apos;)) ),
AND( NOT(ISBLANK(Project__c)) , NOT(ISPICKVAL(Products__r.Family, &apos;Membership&apos;)), NOT(ISPICKVAL(Products__r.Family, &apos;Alternate Funding&apos;)))
)</errorConditionFormula>
    <errorMessage>Product Family of the product should match associated project/event/training</errorMessage>
</ValidationRule>