force-app/main/default/objects/Product_Details__c/listViews/Event_Product_Details.listView-meta.xml
<ListView>
    <fullName>Event_Product_Details</fullName>
    <columns>Sugar_Product_Catalog_Guid__c</columns>
    <columns>Sugar_Product_Catalog_Link__c</columns>
    <columns>NetSuite_Error__c</columns>
    <columns>Event__c</columns>
    <columns>NAME</columns>
    <columns>Products__c</columns>
    <columns>Job_Code__c</columns>
    <columns>NetSuite_Class__c</columns>
    <columns>NetSuite_Name_Override__c</columns>
    <columns>Netsuite_ID__c</columns>
    <columns>NetSuite_Sync__c</columns>
    <columns>NS_Deferred_Revenue_Account__c</columns>
    <columns>NS_Department__c</columns>
    <columns>NS_Income_GL_Account__c</columns>
    <columns>NS_Revenue_Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Details__c.Event</value>
    </filters>
    <filters>
        <field>Event__c</field>
        <operation>contains</operation>
        <value>Embedded Linux Conference Europe 2019</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Event Product Details</label>
</ListView>