force-app/main/default/objects/Product_Details__c/listViews/Membership_NS_Product_Details.listView-meta.xml
<ListView>
    <fullName>Membership_NS_Product_Details</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Products__c</columns>
    <columns>NetSuite_Class__c</columns>
    <columns>Job_Code__c</columns>
    <columns>NS_Department__c</columns>
    <columns>NS_Income_GL_Account__c</columns>
    <columns>NS_Deferred_Revenue_Account__c</columns>
    <columns>NS_Revenue_Schedule__c</columns>
    <columns>Subsidiary_ID__c</columns>
    <columns>Tax_Class__c</columns>
    <columns>NetSuite_Sync__c</columns>
    <columns>Netsuite_ID__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Details__c.Membership</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Renewal_Type__c</field>
        <operation>equals</operation>
        <value>Calendar Year</value>
    </filters>
    <label>INC Membership NS Product Details</label>
    <sharedTo>
        <group>Admin_Group</group>
    </sharedTo>
</ListView>