force-app/main/default/objects/Product_Details__c/listViews/NS.listView-meta.xml
<ListView>
    <fullName>NS</fullName>
    <columns>NetSuite_Error__c</columns>
    <columns>Netsuite_ID__c</columns>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Products__c</columns>
    <columns>Tier__c</columns>
    <columns>Job_Code__c</columns>
    <columns>NetSuite_Name_Override__c</columns>
    <columns>NetSuite_Sync__c</columns>
    <columns>NS_Deferred_Revenue_Account__c</columns>
    <columns>NS_Income_GL_Account__c</columns>
    <columns>NS_Item_Name__c</columns>
    <columns>NS_Revenue_Schedule__c</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>3MF,AOM,DIF</value>
    </filters>
    <label>NS</label>
    <sharedTo>
        <group>Admin_Group</group>
    </sharedTo>
</ListView>