force-app/main/default/objects/Product_Details__c/listViews/Training_Product_Details.listView-meta.xml
<ListView>
    <fullName>Training_Product_Details</fullName>
    <columns>NAME</columns>
    <columns>Training__c</columns>
    <columns>Products__c</columns>
    <columns>Duration__c</columns>
    <columns>Status__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Details__c.Training</value>
    </filters>
    <label>Training Product Details</label>
</ListView>