force-app/main/default/objects/Product_Details__c/listViews/View_All_Product_Details.listView-meta.xml
<ListView>
    <fullName>View_All_Product_Details</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Project__c</columns>
    <columns>NetSuite_Name_Override__c</columns>
    <columns>NS_Item_Name__c</columns>
    <columns>NS_Revenue_Schedule__c</columns>
    <columns>NetSuite_Class__c</columns>
    <columns>NS_Deferred_Revenue_Account__c</columns>
    <columns>NS_Department__c</columns>
    <columns>NS_Income_GL_Account__c</columns>
    <columns>Netsuite_ID__c</columns>
    <columns>Job_Code__c</columns>
    <columns>Start_Tier__c</columns>
    <columns>End_Tier__c</columns>
    <columns>Tier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Details__c.Alternate_Funding,Product_Details__c.Membership</value>
    </filters>
    <label>View All Product Details</label>
</ListView>